RESOLVED FIXED160078
[Coordinated Graphics] Test imported/blink/svg/custom/svg-image-layers-crash.html crashes
https://bugs.webkit.org/show_bug.cgi?id=160078
Summary [Coordinated Graphics] Test imported/blink/svg/custom/svg-image-layers-crash....
Carlos Garcia Campos
Reported 2016-07-22 01:40:22 PDT
The test is marked as crash in EFL test expectations, because it seems to only crash with coordinated graphics. The thing is that the fix for this in blink seems to work, so we could just merge it in WebKit.
Attachments
Patch (2.92 KB, patch)
2016-07-22 01:48 PDT, Carlos Garcia Campos
no flags
Carlos Garcia Campos
Comment 1 2016-07-22 01:48:59 PDT
Michael Catanzaro
Comment 2 2016-07-22 07:58:20 PDT
Comment on attachment 284317 [details] Patch Well this is hardly a real fix, as we've already agreed to remove the ability to disable AC mode, this is just going to break again in the future. But of course it's best to not crash in the meantime....
Carlos Garcia Campos
Comment 3 2016-07-22 08:23:02 PDT
(In reply to comment #2) > Comment on attachment 284317 [details] > Patch > > Well this is hardly a real fix, as we've already agreed to remove the > ability to disable AC mode, this is just going to break again in the future. > But of course it's best to not crash in the meantime.... No no no, this happens with the threaded compositor that uses coordinated graphics and has accelerated compositing always enabled. We can still disable accelerated compositing setting in such case. Try running poster circle with WEBKIT_DISABLE_COMPOSITING_MODE, for example, with current trunk that has threaded compositor enabled.
Michael Catanzaro
Comment 4 2016-07-23 08:04:12 PDT
Comment on attachment 284317 [details] Patch cq+ since I'm gardening and want this failure to disappear.
WebKit Commit Bot
Comment 5 2016-07-23 08:24:55 PDT
Comment on attachment 284317 [details] Patch Clearing flags on attachment: 284317 Committed r203643: <http://trac.webkit.org/changeset/203643>
WebKit Commit Bot
Comment 6 2016-07-23 08:25:00 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.