[Coordinated Graphics] Test imported/blink/svg/custom/svg-image-layers-crash.html crashes https://bugs.webkit.org/show_bug.cgi?id=160078

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2016-07-23
Reviewed by Michael Catanzaro.

Source/WebCore:

This is a merge of Blink r155373.
https://chromiumcodereview.appspot.com/20789004

Disable accelerated compositing for SVGImage content layers. SVGImageChromeClient does not support it.

Fixes imported/blink/svg/custom/svg-image-layers-crash.html.

* svg/graphics/SVGImage.cpp:
(WebCore::SVGImage::dataChanged):

LayoutTests:

* platform/efl/TestExpectations: Remove imported/blink/svg/custom/svg-image-layers-crash.html.

Canonical link: https://commits.webkit.org/178274@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203643 268f45cc-cd09-0410-ab3c-d52691b4dbfc